src/index.css
/* index.css */
:root {
    --max-width: 1100px;
    --border-radius: 12px;

    /* Colors */
    --color-black: #2B2B2B;
    --color-dark-black:#262525; 
    --off-white: #F5F5F3;
    
    /* Spacing */
    --space-sm: 0.5rem;
    --space-md: 1rem;
    --space-lg: 1.5rem;
  
    /* Font Sizes */
    --font-size-sm: 0.5rem;
    --font-size-md: 1rem;
    --font-size-lg: 2rem;
    --font-size-xl: 3rem;
  }

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

html,
body {
    width: 100%;
    /* max-width: 1440px; */
    overflow-x: hidden;
}

body>* {
    flex-grow: 0;
}

main {
    margin-bottom: 50px;
}

.content-card {
    justify-content: center;
    text-align: center;
    align-items: center;
    color: var(--color-dark-black);
    margin-top: 50px;
    margin-bottom: 50px;
}

.content-card h1 {
    text-align: center;
    /* font-family: 'Chalk Brush Personal Use', sans-serif; */
    font-family: 'Game Played', sans-serif;
    color: var(--color-dark-black);
    font-size: 60px;
}

.content-card p {
    font-family: 'Matias', sans-serif;
}

.root-container {
    min-height:100vh;
    overflow-y: hidden;
    --s: 84px;
    --c1: #f2f2f2;
    --c2: #cdcbcc;
    --c3: #999999;
  
    --_g: 0 120deg, #0000 0;
    background: conic-gradient(
        from 0deg at calc(500% / 6) calc(100% / 3),
        var(--c3) var(--_g)
      ),
      conic-gradient(
        from -120deg at calc(100% / 6) calc(100% / 3),
        var(--c2) var(--_g)
      ),
      conic-gradient(
        from 120deg at calc(100% / 3) calc(500% / 6),
        var(--c1) var(--_g)
      ),
      conic-gradient(
        from 120deg at calc(200% / 3) calc(500% / 6),
        var(--c1) var(--_g)
      ),
      conic-gradient(
        from -180deg at calc(100% / 3) 50%,
        var(--c2) 60deg,
        var(--c1) var(--_g)
      ),
      conic-gradient(
        from 60deg at calc(200% / 3) 50%,
        var(--c1) 60deg,
        var(--c3) var(--_g)
      ),
      conic-gradient(
        from -60deg at 50% calc(100% / 3),
        var(--c1) 120deg,
        var(--c2) 0 240deg,
        var(--c3) 0
      );
    background-size: calc(var(--s) * 1.732) var(--s);
  }
  

footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 2.5rem;
    font-family: 'Game Played Outline', sans-serif;
}

/* Footer - end */

@media only screen and (max-width: 768px) {
    .content-card {
        display: inline-block;
    }

    .content-card h1 {
        font-size: 2rem;
    }
}

